# Fire

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: general.h  use_imgui.h  window.h
lib/: README.txt
projects/TestProject/: CMakeLists.txt
projects/TestProject/src/: main.cpp
resources/: delete_me.txt
src/: Fire.h  application.cpp  application.h  core.cpp  general.h  main.cpp  project_placeholder.cpp  use_imgui.cpp  window.cpp  window.h
src/Fire/: api.h  application.cpp  application.h  core.cpp  core.h  entrypoint.h  enums.h  general.h  stl_containers.h  structs.h  typedefs.h  use_imgui.h  utils.cpp  utils.h  window.cpp  window.h
